--- a/src/main/webapp/views/recuperarSenha.html
+++ b/src/main/webapp/views/recuperarSenha.html
@@ -1,20 +1,18 @@
+<?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html>
 
 <html xmlns:th="http:/www.thymeleaf.org">
 
 <head>
-
+<meta name="viewport" content="width=device-width, user-scalable=no"></meta>
+<meta name="viewport" content="initial-scale=1, maximum-scale=1"></meta>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 
 <meta name="_csrf" content="${_csrf.token}" />
 <!-- default header name is X-CSRF-TOKEN -->
 <meta name="_csrf_header" content="${_csrf.headerName}" />
-<meta http-equiv="cache-control" content="max-age=0" />
-<meta http-equiv="cache-control" content="no-cache" />
-<meta http-equiv="expires" content="0" />
-<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-<meta http-equiv="pragma" content="no-cache" />
-<meta charset="UTF-8" />
-<title>Sistema de Gest√£o Escolar</title>
+
+<title>Sistema de Gest„o Escolar</title>
 <link rel="icon" type="image/png" href="../resources/images/favicon.ico" />
 
 <link href="../resources/bootstrap/css/bootstrap.min.css"
@@ -62,14 +60,14 @@
 				<form method="post"
 					class="login100-form validate-form p-l-55 p-r-55 p-t-178 formulario-login"
 					th:object="${usuario}">
-					<span class="login100-form-title"> Sistema de Gest√£o Escolar
+					<span class="login100-form-title"> Sistema de Gest„o Escolar
 					</span>
 
 					<div th:if="${!#strings.isEmpty(mensagemSucesso)}">
 						<ul style="margin-left: 9px;">
-							<span style="color: rgb(255, 5, 15)">ATEN√á√ÉO:</span>
+							<span style="color: rgb(255, 5, 15)">ATEN«√O:</span>
 							<li style="font-size: 15px;">A sua senha foi alterada com <b>sucesso</b>.
-								Para entrar com a sua nova senha por favor, fa√ßa um clique <a
+								Para entrar com a sua nova senha por favor, faÁa um clique <a
 								href="../login.jsp"
 								style="margin-left: 0; color: rgb(255, 5, 15)" class="esqueci">aqui</a>.
 							</li>
@@ -77,9 +75,9 @@
 					</div>
 					<div th:if="${!#strings.isEmpty(mensagemExp)}">
 						<ul style="margin-left: 9px;">
-							<span style="color: rgb(255, 5, 15)">ATEN√á√ÉO:</span>
-							<li style="font-size: 15px;">Aviso: o endere√ßo de
-								recopera√ß√£o de senha j√° <b>expirou</b>. Por favor, Fa√ßa um novo
+							<span style="color: rgb(255, 5, 15)">ATEN«√O:</span>
+							<li style="font-size: 15px;">Aviso: o endereÁo de
+								recuperaÁ„o de senha j· <b>expirou</b>. Por favor, FaÁa um novo
 								pedido clicando <a href="../senha.jsf"
 								style="margin-left: 0; color: rgb(255, 5, 15); font-size: 17px;"
 								class="esqueci">aqui</a>.
@@ -88,22 +86,22 @@
 					</div>
 					<div th:if="${!#strings.isEmpty(mensagemErro)}">
 						<ul style="margin-left: 9px;">
-							<li style="color: #F00;" th:text="${mensagemErro}">
-								Mensagem!!!</li>
+							<li style="color: #F00;" th:text="${mensagemErro}">Mensagem
+								de erro!!!</li>
 						</ul>
 					</div>
 
 
 
 					<div class="wrap-input100 validate-input"
-						data-validate="O campo senha √© obrigat√≥rio!">
+						data-validate="O campo senha È obrigatÛrio!">
 						<input class="input100 senha" type="password" name="password"
 							id="senha" th:field="*{novaSenha}" placeholder="Nova Senha"></input>
 						<span class="focus-input100"></span>
 					</div>
 					<br />
 					<div class="wrap-input100 validate-input"
-						data-validate="O campo confirmar senha √© obrigat√≥rio!">
+						data-validate="O campo confirmar senha È obrigatÛrio!">
 						<input class="input100 senha" type="password" id="cofirmarSenha"
 							th:field="*{confirmaSenha}" placeholder="Confirmar a senha nova"></input>
 						<span class="focus-input100"></span>
@@ -124,7 +122,7 @@
 
 
 					<div class="flex-col-c p-t-110 p-b-40">
-						<span class="txt1 p-b-9"> ¬© &nbsp;<span id="tempo"></span>&nbsp;|&nbsp;
+						<span class="txt1 p-b-9"> © &nbsp;<span id="tempo"></span>&nbsp;|&nbsp;
 							SIGE
 						</span>
 					</div>
